--- a/main.html
+++ b/main.html
@@ -8,6 +8,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container">
+        <h1>Current Date and Time</h1>
+        <p id="timer"></p>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
